# qt-casino

./: .gitignore  CMakeLists.txt  README.md
infrastructure/: main.tf  terraform.tfvars.example
qml/: Chip.qml  ChipStack.qml  CrapsTable.qml  Die.qml  Main.qml
src/: gamelogic.cpp  gamelogic.h  main.cpp
